@@ -39,9 +39,9 @@ public abstract class Evaluator {
    * Return a String after processing an expression and a VariableResolver
    *
    * @see org.apache.solr.handler.dataimport.VariableResolver
-   * @param resolver the VariableResolver instance to be used for evaluation
    * @param expression string to be evaluated
+   * @param context instance
    * @return the value of the given expression evaluated using the resolver
    */
-  public abstract String evaluate(VariableResolver resolver, String expression);
+  public abstract String evaluate(String expression, Context context);
 }
